--- a/files/--HOME--/Brewfile
+++ b/files/--HOME--/Brewfile
@@ -21,6 +21,9 @@ cask_args appdir: '/Applications', fontdir: '/Library/Fonts', no_quarantine: tru
 # java_present = system('/usr/libexec/java_home --failfast')
 is_arm = Hardware::CPU.arm?
 
+is_base_install = ENV.has_key?('HOMEBREW_BASE_INSTALL')
+puts "Only performing base installation!" if is_base_install
+
 tap 'homebrew/services'
 tap 'romkatv/powerlevel10k'
 
@@ -38,6 +41,11 @@ brew 'diff-so-fancy'
 brew 'direnv'
 brew 'mise'
 brew 'powerlevel10k'
+
+# casks pulled in for base configs
+cask 'font-meslo-lg-nerd-font'
+
+return if is_base_install
 
 # formulae pulled in for advanced configs (these are optional, but still recommended)
 brew 'bat'
@@ -59,7 +67,6 @@ cask 'arc'
 cask 'brave-browser'
 cask 'clocker'
 cask 'firefox@nightly' #, greedy: true
-cask 'font-meslo-lg-nerd-font'
 cask 'iterm2'
 cask 'itsycal'
 cask 'jordanbaird-ice'
