--- a/files/--HOME--/Brewfile
+++ b/files/--HOME--/Brewfile
@@ -65,7 +65,6 @@ brew 'tldr'
 
 cask 'aldente'
 cask 'appcleaner'
-cask 'arc'
 cask 'brave-browser'
 cask 'clocker'
 cask 'firefox@nightly' #, greedy: true
@@ -75,7 +74,7 @@ cask 'keepassxc@beta'
 cask 'keepingyouawake'
 cask 'keybase'
 cask 'keycastr'
-cask 'keyclu'
+cask 'keyclu' if is_arm
 cask 'libreoffice'
 cask 'monolingual'
 cask 'notunes'
