--- a/files/--PERSONAL_PROFILES_DIR--/.envrc
+++ b/files/--PERSONAL_PROFILES_DIR--/.envrc
@@ -8,7 +8,7 @@ type is_non_zero_string &> /dev/null 2>&1 || source "${HOME}/.shellrc"
 
 replace_dir_if_exists_and_is_not_symlinked() {
   local target="${PERSONAL_PROFILES_DIR}/${2}"
-  ! is_directory "${1}" && ! is_directory "${target}" && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
+  ! is_directory "${1}" && ! is_directory "${target}" && warn "skipping symlinking '${2}' since either source or target don't exist!!!" && return
 
   mkdir -pv "$(dirname "${1}")" "${target}"
 
