Removed duplication (now 'resurrect-repositories.rb' will utilize '.shellrc') Removed usages of 'eval' to simplify the shell scripts

--- a/files/--HOME--/.shellrc
+++ b/files/--HOME--/.shellrc
@@ -282,6 +282,29 @@ folder_size() {
   echo $(cyan "$(\du -sh "${1}" | cut -f1)")
 }
 
+clone_repo_into() {
+  local target_folder="${2}"
+  ensure_dir_exists "${target_folder}"
+  if ! is_git_repo "${target_folder}"; then
+    local tmp_folder="$(mktemp -d)"
+    git -C "${tmp_folder}" clone -q "${1}" .
+    mv "${tmp_folder}/.git" "${target_folder}"
+    git -C "${target_folder}" checkout .
+    git -C "${target_folder}" submodule update --init --recursive --remote --rebase --force
+    rm -rf "${tmp_folder}"
+    success "Successfully cloned '$(yellow "${1}")$(green "' into '")$(yellow "${target_folder}")$(green "'")"
+
+    local target_branch="${3}"
+    if is_non_zero_string "${target_branch}"; then
+      git -C "${target_folder}" switch "${target_branch}"
+      local checked_out_branch="$(git -C "${target_folder}" branch --show-current)"
+      [[ "${checked_out_branch}" != "${target_branch}" ]] && error "'${target_branch}' is not equal to the branch that was checked out: '${checked_out_branch}'; something is wrong. Please correct before retrying!"
+    fi
+  else
+    warn "Skipping cloning of '${1}' since '${target_folder}' is already a git repo"
+  fi
+}
+
 # if is_macos; then
   # Uninstall and reinstall xcode (useful immediately after upgrade or if reinstalling the OS)
   # TODO: Kept for reference purposes
