--- a/files/--PERSONAL_PROFILES_DIR--/.envrc
+++ b/files/--PERSONAL_PROFILES_DIR--/.envrc
@@ -17,6 +17,8 @@ replace_dir_if_exists_and_is_not_symlinked() {
 
   # if the folder doesn't exist, create the symlink
   ! is_directory "${1}" && ln -sf "${target}" "${1}" && success "Successfully symlinked ${1} --> ${target}!!!"
+
+  unset target
 }
 
 # Capture Arc profile folder into git-tracked location
