Handled chrome folders for all FF-based browsers
Added utility functions for 'git pull' and 'git push'

Reuse utility function for setting ssh folder permissions

--- a/files/--HOME--/.envrc
+++ b/files/--HOME--/.envrc
@@ -2,12 +2,12 @@
 
 # vim:filetype=zsh syntax=zsh tabstop=2 shiftwidth=2 softtabstop=2 expandtab autoindent fileencoding=utf-8
 
-type dir_has_children &> /dev/null 2>&1 || source "${HOME}/.shellrc"
+type set_ssh_folder_permissions &> /dev/null 2>&1 || source "${HOME}/.shellrc"
 
 #####################################
 # Reapply permissions for ssh files #
 #####################################
-dir_has_children "${HOME}/.ssh" && echo "$(blue "Setting permissions on '${HOME}/.ssh' folder contents")" && chmod -R 600 "${HOME}"/.ssh/*
+set_ssh_folder_permissions
 
 #######################################
 # Reapply permissions for gnupg files #
