--- a/files/--HOME--/.shellrc
+++ b/files/--HOME--/.shellrc
@@ -58,7 +58,7 @@ export GH_USERNAME='vraravam'
 export UPSTREAM_GH_USERNAME='vraravam' # Note: Do NOT change this
 
 # This repo is cloned into this location
-export DOTFILES_DIR="${HOME}/.bin-oss"
+export DOTFILES_DIR="${HOME}/.dotfiles"
 
 # Branch name of the dotfiles repo that's to be used for testing PR changes before merging
 export DOTFILES_BRANCH='master'
